mobile and small details

--- a/index.html
+++ b/index.html
@@ -59,17 +59,16 @@
 			<div class="row">
 				
 				<nav class="navbar">
-					<div class="three columns navbar__brand">
+					<div class="navbar__brand">
 						<a href="index.html">ERGOPROJECT</a>
-					</div>
-					<div class="nine columns navbar__right">
+					</div><div class="navbar__right">
 						<div class="twelve columns navbar__top">
 							<div class="navbar__slogan">
 								O futuro da engenharia.
 							</div>	
 							<div class="navbar__social">
-								<div class="navbar__social-icon"><img src="images/icons/facebook-logo.svg"></div>
-								<div class="navbar__social-icon"><img src="images/icons/twitter.svg"></div>
+								<a href="#" class="navbar__social-icon"><img src="images/icons/facebook-logo.svg"></a>
+								<a href="#" class="navbar__social-icon"><img src="images/icons/twitter.svg"></a>
 							</div>
 							<hr class="separate-line"/>
 						</div>
@@ -93,31 +92,35 @@
  
 	  <div class="item"><div class="textoverlay">
 	  	<h2>Consultoria em Engenharia</h2>
-	  	<div class="primary-btn position">os nossos serviços</div><div class="secondary-btn position">contacte-nos</div>
+	  	<a href="consultoria.html" class="primary-btn position">os nossos serviços</a><a href="contactos.html" class="secondary-btn position">contacte-nos</a>
 	  </div><img src="images/porto.png" alt="porto"></div>
-	  <div class="item"><div class="textoverlay"><h2>Fiscalização</h2></div><img src="images/construction.jpg" alt="andaimes"></div>
-	 
+	  <div class="item"><div class="textoverlay"><h2>Coordenação de Segurança</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><img src="images/construction.jpg" alt="andaimes"></div>
+	  <div class="item"><div class="textoverlay"><h2>Projectos de Especialidades</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><img src="images/architect.jpg" alt="andaimes"></div>
 	</div>
 	<div class="container">
 		<div class="row about-section">
-			<div class="four columns">
+			<div class="four columns about-item">
 				<div class="about-section__picture1 about-section__content"></div>
 				<div class="about-section__subject">Sobre nós</div>
 				<div class="about-section__description">
-					A ERGOPROJECT-CONSULTORES ASSOCIADOS, LDA, é sócia da associação portuguesa de projectistas e consultores...
+					A ERGOPROJECT-CONSULTORES ASSOCIADOS, LDA, é sócia da associação portuguesa de projectistas e consultores.
 				</div>
+				<a class="link__know-more" href="organizacao.html">saiba mais <span class="icon-arrow-right2"></span></a>
 			</div>
-			<div class="four columns">
+			<div class="four columns about-item">
 				<div class="about-section__picture2 about-section__content"></div>
 				<div class="about-section__subject">Consultoria</div>
 				<div class="about-section__description">
-					PRESTAMOS SERVIÇOS DE CONSULTORIA E APOIO A TODAS AS ATIVIDADES DAS ENGENHARIAS, CONSTRUÇÃO E ARQUITETURA.
+					Prestamos serviços de consultoria e apoio a todas as atividades das engenharias,
+					construção e arquitetura.
 				</div>
+				<a class="link__know-more" href="consultoria.html">saiba mais <span class="icon-arrow-right2"></span></a>
 			</div>
-			<div class="four columns">
+			<div class="four columns about-item">
 				<div class="about-section__picture3 about-section__content"></div>
 				<div class="about-section__subject">Projectos</div>
-				<div class="about-section__description"></div>
+				<div class="about-section__description">Executamos projetos de estruturas, térmica, acústica, aguas, ITED, eletricidade, segurança contra incêndios, etc.</div>
+				<a class="link__know-more" href="projectos.html">saiba mais <span class="icon-arrow-right2"></span></a>
 			</div>
 		</div>
 		<hr />
@@ -185,22 +188,22 @@
 			<div class="section__line"></div>
 			<div class="section__news">
 				<div class="four columns section__news-item">
-					<div class="section__news-photo1"></div>
-					<div class="section__news-title">Titulo</div>
-					<div class="section__news-date">data</div>
-					<div class="section__news-description">descrição...</div>
-				</div>
-				<div class="four columns section__new-item">
-					<div class="section__news-photo2"></div>
-					<div class="section__news-title">Titulo</div>
-					<div class="section__news-date">data</div>
-					<div class="section__news-description">descrição...</div>
+					<a href="projecto1.html"><div class="section__news-photo1 section__news-photo"></div></a>
+					<div class="section__news-title"><a href="projecto1.html">Estruturas em Betão</a></div>
+					<div class="section__news-date">Janeiro, 2015</div>
+					<div class="section__news-description">Projeto misto, metal, madeira e betão.</div>
 				</div>
 				<div class="four columns section__news-item">
-					<div class="section__news-photo3"></div>
-					<div class="section__news-title">Titulo</div>
-					<div class="section__news-date">data</div>
-					<div class="section__news-description">descrição...</div>
+					<a href="projecto2.html"><div class="section__news-photo2"></div></a>
+					<div class="section__news-title"><a href="projecto2.html">Estruturas Metálicas</a></div>
+					<div class="section__news-date">Janeiro, 2015</div>
+					<div class="section__news-description">Projeto de estabilidade, edifcio misto.</div>
+				</div>
+				<div class="four columns section__news-item">
+					<a href="projecto3.html"><div class="section__news-photo3"></div></a>
+					<div class="section__news-title"><a href="projecto3.html">Reabilitação Urbana</a></div>
+					<div class="section__news-date">Fevereiro, 2015</div>
+					<div class="section__news-description">Diversas soluções para a reabilitação urbana.</div>
 				</div>
 			</div>
 		</div>
