--- a/contactos.html
+++ b/contactos.html
@@ -58,17 +58,16 @@
       <div class="row">
         
         <nav class="navbar">
-          <div class="three columns navbar__brand">
+          <div class="navbar__brand">
             <a href="index.html">ERGOPROJECT</a>
-          </div>
-          <div class="nine columns navbar__right">
+          </div><div class="navbar__right">
             <div class="twelve columns navbar__top">
               <div class="navbar__slogan">
                 O futuro da engenharia.
               </div>  
               <div class="navbar__social">
-                <div class="navbar__social-icon"><img src="images/icons/facebook-logo.svg"></div>
-                <div class="navbar__social-icon"><img src="images/icons/twitter.svg"></div>
+                <a href="#" class="navbar__social-icon"><img src="images/icons/facebook-logo.svg"></a>
+                <a href="#" class="navbar__social-icon"><img src="images/icons/twitter.svg"></a>
               </div>
               <hr class="separate-line"/>
             </div>
@@ -96,7 +95,7 @@
       <div class="section__line"></div>
       <div class="section__contacts">
         <div class="section__form-title">Envie-nos o seu comentário:</div>
-        <form class="contact-form">
+        <form class="contact-form" method="post" name="contact_form" action="contact-form-handler.php">
           <div class="six columns">
             Primeiro e último nome:<br>
             <input type="text" name="name" class="form-input"><br>
@@ -112,7 +111,7 @@
           </div>  
         </form> 
         <div class="twelve columns ">
-          <div class="eight columns">
+          <div class="eight columns google-maps">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3003.951770757006!2d-8.630011485211293!3d41.15740371818476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd246508109acc7d%3A0xec7a7dc220a635af!2sPra%C3%A7a+de+Mouzinho+de+Albuquerque+113%2C+4100-359+Porto!5e0!3m2!1sen!2spt!4v1473632596861" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
           <div class="four columns">
