--- a/projecto2.html
+++ b/projecto2.html
@@ -58,17 +58,16 @@
       <div class="row">
         
         <nav class="navbar">
-          <div class="three columns navbar__brand">
+          <div class="navbar__brand">
             <a href="index.html">ERGOPROJECT</a>
-          </div>
-          <div class="nine columns navbar__right">
+          </div><div class="navbar__right">
             <div class="twelve columns navbar__top">
               <div class="navbar__slogan">
                 O futuro da engenharia.
               </div>  
               <div class="navbar__social">
-                <div class="navbar__social-icon"><img src="images/icons/facebook-logo.svg"></div>
-                <div class="navbar__social-icon"><img src="images/icons/twitter.svg"></div>
+                <a href="#" class="navbar__social-icon"><img src="images/icons/facebook-logo.svg"></a>
+                <a href="#" class="navbar__social-icon"><img src="images/icons/twitter.svg"></a>
               </div>
               <hr class="separate-line"/>
             </div>
