replace images on index.html
replace images on index.html

--- a/index.html
+++ b/index.html
@@ -88,14 +88,18 @@
 			</div>
 		</div>	
 	</header>	
+	
 	<div id="owl-demo" class="owl-carousel owl-theme">
  
 	  <div class="item"><div class="textoverlay">
 	  	<h2>Consultoria em Engenharia</h2>
 	  	<a href="consultoria.html" class="primary-btn position">os nossos serviços</a><a href="contactos.html" class="secondary-btn position">contacte-nos</a>
-	  </div><img src="images/porto.png" alt="porto"></div>
-	  <div class="item"><div class="textoverlay"><h2>Coordenação de Segurança</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><img src="images/construction.jpg" alt="andaimes"></div>
-	  <div class="item"><div class="textoverlay"><h2>Projectos de Especialidades</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><img src="images/architect.jpg" alt="andaimes"></div>
+	  </div><div class="background-top"></div><img src="images/Carrocel/car2.jpg" alt="porto"></div>
+	  <div class="item"><div class="textoverlay"><h2>Coordenação de Segurança</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/Car3.jpg" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2>Projectos de Especialidades</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/Car4.jpg" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2>Consultoria</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car5.jpg" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2></h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car6.jpg" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2></h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car7.jpg" alt=""></div>
 	</div>
 	<div class="container">
 		<div class="row about-section">
@@ -118,7 +122,7 @@
 			</div>
 			<div class="four columns about-item">
 				<div class="about-section__picture3 about-section__content"></div>
-				<div class="about-section__subject">Projectos</div>
+				<div class="about-section__subject">Projetos</div>
 				<div class="about-section__description">Executamos projetos de estruturas, térmica, acústica, aguas, ITED, eletricidade, segurança contra incêndios, etc.</div>
 				<a class="link__know-more" href="projectos.html">saiba mais <span class="icon-arrow-right2"></span></a>
 			</div>
@@ -160,19 +164,23 @@
 			</div>	
 			<div class="section__line"></div>
 			<div class="section__services">
+
 				<div class="four columns section__service1">
+					<div class="section__service-background"></div>
 					<div class="section__service-title">Engenharia Civil</div>
 					<div class="section__service-link">
 						<a class="link__know-more" href="organizacao.html#servicos">saiba mais <span class="icon-arrow-right2"></span></a>
 					</div>	
 				</div>
 				<div class="four columns section__service2">
+					<div class="section__service-background"></div>
 					<div class="section__service-title">Engenharia Mecânica</div>
 					<div class="section__service-link">
 						<a class="link__know-more" href="organizacao.html#servicos">saiba mais <span class="icon-arrow-right2"></span></a>
 					</div>	
 				</div>
 				<div class="four columns section__service3">
+					<div class="section__service-background"></div>
 					<div class="section__service-title">Engenharia Electrotécnica</div>
 					<div class="section__service-link">
 						<a class="link__know-more" href="organizacao.html#servicos">saiba mais <span class="icon-arrow-right2"></span></a>
