--- a/projectos.html
+++ b/projectos.html
@@ -95,30 +95,27 @@
       <div class="section__line"></div>
       <div class="section__projects">
         <div class="four columns">
-          <div class="project" style="background-image:url(images/house1.jpg);">
+          <div class="project" style="background-image:url(images/Proj1/Bet1.jpg);">
             <div class="after"></div>
             <div class="project__title">Estruturas em Betão</div>
-            <div class="project__location">Porto, Matosinhos</div>
             <div class="project__link">
               <a class="link__know-more" href="projecto1.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div>  
           </div>  
         </div>  
         <div class="four columns">
-          <div class="project" style="background-image:url(images/house2.jpg);">
+          <div class="project" style="background-image:url(images/Proj2/Met1.jpg);">
             <div class="after"></div>
-            <div class="project__title">Estruturas Metálicas</div>
-            <div class="project__location">Porto, Matosinhos</div>
+            <div class="project__title">Estruturas Metálicas e Madeira</div>
             <div class="project__link">
               <a class="link__know-more" href="projecto2.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div>  
           </div> 
         </div>  
         <div class="four columns">
-          <div class="project" style="background-image:url(images/house3.jpg);">
+          <div class="project" style="background-image:url(images/Proj3/Reb1.jpg);">
             <div class="after"></div>
             <div class="project__title">Reabilitação Urbana</div>
-            <div class="project__location">Porto, Matosinhos</div>
             <div class="project__link">
               <a class="link__know-more" href="projecto3.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div> 
@@ -127,20 +124,18 @@
       </div> 
       <div class="section__projects">
         <div class="four columns">
-          <div class="project" style="background-image:url(images/building.jpg);">
+          <div class="project" style="background-image:url(images/Proj4/Inf1.jpg);">
             <div class="after"></div>
-            <div class="project__title">Águas Prediais e Residuais</div>
-            <div class="project__location">Porto, Matosinhos</div>
+            <div class="project__title">Infraestruturas de Edificios</div>
             <div class="project__link">
               <a class="link__know-more" href="projecto4.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div>  
           </div>  
         </div>  
         <div class="four columns">
-          <div class="project" style="background-image:url(images/house4.jpg);">
+          <div class="project" style="background-image:url(images/AVAC/avac1.jpg);">
             <div class="after"></div>
             <div class="project__title">AVAC</div>
-            <div class="project__location">Porto, Matosinhos</div>
             <div class="project__link">
               <a class="link__know-more" href="projecto5.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div>  
