--- a/projecto4.html
+++ b/projecto4.html
@@ -90,18 +90,29 @@
   <div class="container main-section">
     <div class="row section">
       <div class="section__title">
-        Projecto:Águas Prediais e Residuais
+        Projecto:Infraestruturas de Edifícios
       </div>  
       <div class="section__line"></div>
       <div class="section__project">
         <div class="twelve columns">
           <div class="eight columns">
-            <div class="image" style="background-image:url(images/building.jpg)"></div>
+            <div class="image" style="background-image:url(images/Proj4/Inf1.jpg)"></div>
           </div>
           <div class="four columns">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris odio mauris, sodales nec tincidunt volutpat, hendrerit ut ipsum. Phasellus tincidunt sagittis tincidunt. Vestibulum quis nunc quam. Phasellus non aliquam purus. Aenean pharetra maximus neque ut rutrum. 
           </div>
         </div> 
+        <div class="twelve columns section__space-top">
+          <div class="three columns">
+            <div class="image" style="background-image:url(images/Proj4/Inf2.jpg)"></div>
+          </div>  
+          <div class="three columns">
+            <div class="image" style="background-image:url(images/Proj4/Inf3.jpg)"></div>
+          </div>
+          <div class="six columns">
+            <div class="image" style="background-image:url(images/Proj4/Inf4.jpg)"></div>
+          </div>
+        </div>
       </div>  
     </div>
   </div>    
