--- a/projectos.html
+++ b/projectos.html
@@ -113,7 +113,7 @@
           </div> 
         </div>  
         <div class="four columns">
-          <div class="project" style="background-image:url(images/Proj3/Reb1.jpg);">
+          <div class="project" style="background-image:url(images/Proj3/Reb1.JPG);">
             <div class="after"></div>
             <div class="project__title">Reabilitação Urbana</div>
             <div class="project__link">
