--- a/contactos.html
+++ b/contactos.html
@@ -98,13 +98,13 @@
         <form class="contact-form" method="post" name="contact_form" action="contact-form-handler.php">
           <div class="six columns">
             Primeiro e último nome:<br>
-            <input type="text" name="name" class="form-input"><br>
+            <input type="text" name="name" class="form-input js-contact"><br>
             Seu e-mail:<br>
-            <input type="email" name="email" class="form-input">
+            <input type="email" name="email" class="form-input js-contact">
           </div>
           <div class="six columns">
             Escreva a sua mensagem:<br>
-            <textarea type="text" name="message" class="form-textarea"></textarea>
+            <textarea type="text" name="message" class="form-textarea js-contact"></textarea>
           </div> 
           <div class="twelve columns">
             <input type="submit" value="Submit" class="form-submit"> 
