--- a/projectos.html
+++ b/projectos.html
@@ -95,7 +95,7 @@
       <div class="section__line"></div>
       <div class="section__projects">
         <div class="four columns">
-          <div class="project" style="background-image:url(images/Proj1/Bet1.jpg);">
+          <div class="project" style="background-image:url(images/Proj1/Bet1.JPG);">
             <div class="after"></div>
             <div class="project__title">Estruturas em Betão</div>
             <div class="project__link">
@@ -124,7 +124,7 @@
       </div> 
       <div class="section__projects">
         <div class="four columns">
-          <div class="project" style="background-image:url(images/Proj4/Inf1.jpg);">
+          <div class="project" style="background-image:url(images/Proj4/Inf1.JPG);">
             <div class="after"></div>
             <div class="project__title">Infraestruturas de Edificios</div>
             <div class="project__link">
