--- a/projecto4.html
+++ b/projecto4.html
@@ -96,7 +96,7 @@
       <div class="section__project">
         <div class="twelve columns">
           <div class="eight columns">
-            <div class="image" style="background-image:url(images/Proj4/Inf1.jpg)"></div>
+            <div class="image" style="background-image:url(images/Proj4/Inf1.JPG)"></div>
           </div>
           <div class="four columns">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris odio mauris, sodales nec tincidunt volutpat, hendrerit ut ipsum. Phasellus tincidunt sagittis tincidunt. Vestibulum quis nunc quam. Phasellus non aliquam purus. Aenean pharetra maximus neque ut rutrum. 
