--- a/consultoria.html
+++ b/consultoria.html
@@ -103,12 +103,27 @@
             <div class="title">Fiscalização de Obras</div>
           </div>
           <div class="twelve columns">
-            <p class="section-text">Praesent pharetra nec sem nec vehicula. Duis faucibus lacus dictum, convallis risus ut, blandit ex. Praesent ut varius neque. Integer sodales nulla mauris, ut semper ligula rutrum vitae.</p>
-            <ul>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-            </ul>  
+            <p class="section-text">Anteriormente descurada a Actividade de Gestão e Fiscalização de Obras, veio através da Portaria nº232/2008 de 11 de Março, ver reconhecida a sua elevada importância no sector da construção civil. O dono de obra, seja este Particular ou Publico, reconhece hoje em dia uma mais-valia, ao contratar uma empresa Experiente para efectuar este serviço, com rigor sabedoria, isenção e disciplina. </p>
+            <p class="section-text">Sendo as mais-valias para o Dono de Obra a garantia de da obtenção de uma Qualidade no desenvolvimento do seu Projeto, aliados a um Controlo de Custos e ao Rigoroso Cumprimento dos Prazos. Salientamos entre outros, os seguintes serviços:</p>
+            <div class="six columns">
+              <ul>
+                <li>Fiscalização de Obras; </li>
+                <li>Gestão de Obras; </li>
+                <li>Caderno de Encargos; </li>
+                <li>Medições;</li>
+                <li>Orçamentos;</li>
+                <li>Revisão de Projetos;</li>
+              </ul>
+            </div>
+            <div class="five columns"> 
+              <ul>   
+                <li>Análise de Propostas;</li>
+                <li>Coordenação de Projetos;</li>
+                <li>Pareceres;</li>
+                <li>Consultoria;</li>
+                <li>Peritagens.</li> 
+              </ul>  
+            </div>  
           </div>  
         </div>
         <div class="sub-section">
@@ -119,12 +134,25 @@
             <div class="title">Segurança</div>
           </div>
           <div class="twelve columns">
-            <p class="section-text">Praesent pharetra nec sem nec vehicula. Duis faucibus lacus dictum, convallis risus ut, blandit ex. Praesent ut varius neque. Integer sodales nulla mauris, ut semper ligula rutrum vitae.</p>
-            <ul>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-            </ul>  
+            <p class="section-text">Anteriormente descurada a Actividade da Coordenação de Segurança de Obras, veio através do Decreto-Lei nº 273/2003 de 29 de Outubro, ver reconhecida a sua elevada importância no sector da construção civil. O dono de obra, seja este Particular ou Publico, reconhece hoje em dia uma mais-valia, ao contratar uma empresa Experiente para efectuar este serviço, com rigor sabedoria, isenção e disciplina. </p>
+            <p class="section-text">Sendo as mais-valias para o Dono de Obra a garantia de da obtenção de uma Qualidade, aliados a um Controlo dos Riscos associados ao desenvolvimento do seu Projeto. Salientamos entre outros, os seguintes serviços:</p>
+            <div class="six columns">
+              <ul>
+                <li>Coordenação de Segurança na Fase Obra; </li>
+                <li>Planos de Segurança e Saúde - PSS; </li>
+                <li>Desenvolvimento de Planos de Segurança e Saúde - DPSS; </li>
+                <li>Implementação de Planos de Segurança e Saúde - IPSS;</li>
+                <li>Segurança e Higiene no Trabalho;</li>
+              </ul>  
+            </div>
+            <div class="five columns">
+              <ul>  
+                <li>Vistorias:</li>
+                <li>Pareceres;</li>
+                <li>Consultoria;</li>
+                <li>Peritagens.</li>
+              </ul>  
+            </div>    
           </div>
         </div>  
       </div>
