--- a/organizacao.html
+++ b/organizacao.html
@@ -102,8 +102,8 @@
             <div class="title">Sobre nós</div>
           </div>
           <div class="twelve columns">
-            <p class="section-text">Curabitur sed metus a augue feugiat pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Quisque sit amet ipsum ligula.</p>
-            <p class="section-text">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Suspendisse varius, ligula sed interdum mollis, metus libero malesuada arcu, non condimentum neque sapien in dolor.</p>
+            <p class="section-text">A ERGOPROJECT-CONSULTORES ASSOCIADOS, LDA, é sócia da associação portuguesa de projectistas e consultores, tem nos seus quadros profissionais ligados ao CAE 71-Actividades de Arquitetura, de engenharia e técnicas afins; actividades de ensaios e de análises técnicas.</p>
+            <p class="section-text"></p>
           </div>  
         </div>
         <div class="services" id="servicos">
@@ -112,19 +112,46 @@
               <span class="section-icon icon-handyman-tools"></span>
             </div>
             <div class="title">Os nossos serviços</div>
+            <div class="twelve columns">
+              <p class="section-text">Prestamos serviços de consultoria e apoio a todas as atividades das engenharias, construção e arquitetura.</p>
+            </div>  
           </div>
           <div class="twelve columns services__container">
             <div class="four columns">
               <div class="service-title">Engenharia Civil</div>
-              <div class="service-text">Etiam pharetra nunc dui, eu hendrerit sem ultrices eget. Morbi pellentesque mi sodales, varius ipsum ac, ultrices lectus.</div>
+              
+              <ul>
+                <li><div class="service-text">Projetos de Estruturas;</div></li>
+                <li><div class="service-text">Projetos de Estruturas;</div></li> 
+                <li><div class="service-text">Projetos de Contenção Periferica;</div></li>
+                <li><div class="service-text">Projetos de Fundações;</div></li> 
+                <li><div class="service-text">Projetos de Águas Prediais;</div></li>
+                <li><div class="service-text">Projeto de Águas Residuais;</div></li>
+              </ul>
+              
             </div>  
             <div class="four columns">
               <div class="service-title">Engenharia Mecânica</div>
-              <div class="service-text">Etiam pharetra nunc dui, eu hendrerit sem ultrices eget. Morbi pellentesque mi sodales, varius ipsum ac, ultrices lectus.</div>
+              <ul>
+                <li><div class="service-text">Projetos de AVAC;</div></li>
+                <li><div class="service-text">Projetos de Ventilação;</div></li> 
+                <li><div class="service-text">Projetos de Exaustão de Fumos;</div></li>
+                <li><div class="service-text">Projetos de Instalações Mecânicas;</div></li> 
+                <li><div class="service-text">Projetos de Instalações Especiais;</div></li>
+                <li><div class="service-text">Estudos Energéticos;</div></li>
+              </ul>
             </div>
             <div class="four columns">
               <div class="service-title">Engenharia Electrotécnica</div>
-              <div class="service-text">Etiam pharetra nunc dui, eu hendrerit sem ultrices eget. Morbi pellentesque mi sodales, varius ipsum ac, ultrices lectus.</div>
+                <ul>
+                  <li><div class="service-text">Projetos de Electricidade;</div></li>
+                  <li><div class="service-text">Projetos de Telecomunicações;</div></li> 
+                  <li><div class="service-text">Projetos de ITED;</div></li>
+                  <li><div class="service-text">Projetos de Domótica;</div></li> 
+                  <li><div class="service-text">Projetos de Redes Informáticas;</div></li>
+                  <li><div class="service-text">Fichas Electrotécnicas;</div></li>
+                  <li><div class="service-text">Relatórios Técnicos;</div></li>
+                </ul>
             </div>
           </div>
         </div>
