--- a/projecto2.html
+++ b/projecto2.html
@@ -110,7 +110,7 @@
             <div class="image" style="background-image:url(images/Proj2/Met3.jpg)"></div>
           </div>
           <div class="six columns">
-            <div class="image" style="background-image:url(images/Proj2/met4.jpg)"></div>
+            <div class="image" style="background-image:url(images/Proj2/met4.JPG)"></div>
           </div>
         </div>
       </div>  
