--- a/index.html
+++ b/index.html
@@ -92,14 +92,15 @@
 	<div id="owl-demo" class="owl-carousel owl-theme">
  
 	  <div class="item"><div class="textoverlay">
-	  	<h2>Consultoria em Engenharia</h2>
+	  	<h2>Consultoria em Engenharia.</h2>
 	  	<a href="consultoria.html" class="primary-btn position">os nossos serviços</a><a href="contactos.html" class="secondary-btn position">contacte-nos</a>
 	  </div><div class="background-top"></div><img src="images/porto.jpeg" alt="porto"></div>
-	  <div class="item"><div class="textoverlay"><h2>Coordenação de Segurança</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/Car3.jpg" alt=""></div>
-	  <div class="item"><div class="textoverlay"><h2>Projectos de Especialidades</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/Car4.JPG" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2>Fiscalização de Obras.</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car2.jpg" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2>Coordenação de Segurança.</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/Car3.jpg" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2>Projectos de Especialidades.</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/Car4.JPG" alt=""></div>
 	  <div class="item"><div class="textoverlay"><h2>Consultoria</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car5.jpg" alt=""></div>
-	  <div class="item"><div class="textoverlay"><h2>Serviços com Qualidade e Rapidez!</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car6.JPG" alt=""></div>
-	  <div class="item"><div class="textoverlay"><h2>Fiscalização de Obras.</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car7.jpg" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2>Coordenação de Projetos.</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car6.JPG" alt=""></div>
+	  <div class="item"><div class="textoverlay"><h2>Serviços com Qualidade e Rapidez!</h2><a href="consultoria.html" class="primary-btn position">saiba mais</a></div><div class="background-top"></div><img src="images/Carrocel/car7.jpg" alt=""></div>
 	</div>
 	<div class="container">
 		<div class="row about-section">
