--- a/projecto1.html
+++ b/projecto1.html
@@ -99,7 +99,7 @@
             <div class="image" style="background-image:url(images/Proj1/Bet1.JPG)"></div>
           </div>
           <div class="four columns">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris odio mauris, sodales nec tincidunt volutpat, hendrerit ut ipsum. Phasellus tincidunt sagittis tincidunt. Vestibulum quis nunc quam. Phasellus non aliquam purus. Aenean pharetra maximus neque ut rutrum. 
+            Todo o tipo de estruturas em betão armado.
           </div>
         </div>
         <div class="twelve columns section__space-top">
