--- a/projecto5.html
+++ b/projecto5.html
@@ -100,7 +100,7 @@
               <div class="image" style="background-image:url(images/AVAC/avac1.jpg)"></div>
             </div>
             <div class="four columns">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris odio mauris, sodales nec tincidunt volutpat, hendrerit ut ipsum. Phasellus tincidunt sagittis tincidunt. Vestibulum quis nunc quam. Phasellus non aliquam purus. Aenean pharetra maximus neque ut rutrum. 
+              Projetos de AVAC, ventilação e exaustão de fumos.
             </div>
           </div> 
           <div class="twelve columns section__space-top">
