--- a/projectos.html
+++ b/projectos.html
@@ -141,6 +141,15 @@
             </div>  
           </div>
         </div>
+        <div class="four columns">
+          <div class="project" style="background-image:url(images/Proj6/Lot1.JPG);">
+            <div class="after"></div>
+            <div class="project__title">Infraestruturas de Loteamentos</div>
+            <div class="project__link">
+              <a class="link__know-more" href="projecto6.html">saiba mais <span class="icon-arrow-right2"></span></a>
+            </div>  
+          </div>
+        </div>
       </div>     
     </div> 
   </div>  
