--- a/projecto2.html
+++ b/projecto2.html
@@ -99,7 +99,7 @@
             <div class="image" style="background-image:url(images/Proj2/Met1.jpg)"></div>
           </div>
           <div class="four columns">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris odio mauris, sodales nec tincidunt volutpat, hendrerit ut ipsum. Phasellus tincidunt sagittis tincidunt. Vestibulum quis nunc quam. Phasellus non aliquam purus. Aenean pharetra maximus neque ut rutrum. 
+            Todo o tipo de projetos em estrutura metálica, como por exemplo LSF. 
           </div>
         </div> 
         <div class="twelve columns section__space-top">
