--- a/projecto6.html
+++ b/projecto6.html
@@ -90,28 +90,27 @@
   <div class="container main-section">
     <div class="row section">
       <div class="section__title">
-        Projecto: Reabilitação Urbana
+        Projecto:Infraestruturas de Edifícios
       </div>  
       <div class="section__line"></div>
       <div class="section__project">
         <div class="twelve columns">
           <div class="eight columns">
-            <div class="image" style="background-image:url(images/Proj3/Reb4.JPG)"></div>
+            <div class="image" style="background-image:url(images/Proj6/Lot1.JPG)"></div>
           </div>
           <div class="four columns">
-            Diversas soluções para a reabilitação urbana. 
+             
           </div>
         </div> 
         <div class="twelve columns section__space-top">
           <div class="three columns">
-            <div class="image" style="background-image:url(images/Proj3/Reb1.JPG)"></div>
-
+            <div class="image" style="background-image:url(images/Proj6/Lot2.JPG)"></div>
           </div>  
           <div class="three columns">
-            <div class="image image-up" style="background-image:url(images/Proj3/Reb2.JPG)"></div>
+            <div class="image" style="background-image:url(images/Proj6/Lot3.JPG)"></div>
           </div>
           <div class="six columns">
-            <div class="image image-up" style="background-image:url(images/Proj3/Reb3.JPG)"></div>
+            <div class="image" style="background-image:url(images/Proj6/Lot4.JPG)"></div>
           </div>
         </div>
       </div>  
