--- a/consultoria.html
+++ b/consultoria.html
@@ -94,7 +94,7 @@
       </div>  
       <div class="section__line"></div>
       <div class="section__consultancy">
-        <p class="section-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec viverra libero, viverra congue justo. Suspendisse nec purus ultricies, feugiat ante sit amet, molestie orci. Donec tincidunt eros euismod velit convallis mattis.</p>
+        <p class="section-text">Na área da consultoria e assessoria, apoiamos o dono de obra e os Arquitetos na área da Engenharia, gestão de projeto, gestão de obras, fiscalização, segurança.</p>
         <div class="sub-section">
           <div class="twelve columns">
             <div class="icon__circle">
