--- a/projecto2.html
+++ b/projecto2.html
@@ -90,7 +90,7 @@
   <div class="container main-section">
     <div class="row section">
       <div class="section__title">
-        Projecto: Estruturas Metálicas
+        Projecto: Estruturas Metálicas e Madeira
       </div>  
       <div class="section__line"></div>
       <div class="section__project">
