--- a/organizacao.html
+++ b/organizacao.html
@@ -120,7 +120,7 @@
             <div class="four columns">
               <div class="service-title">Engenharia Civil</div>
               
-              <ul>
+              <ul class="list">
                 <li><div class="service-text">Projetos de Estruturas;</div></li>
                 <li><div class="service-text">Projetos de Estruturas;</div></li> 
                 <li><div class="service-text">Projetos de Contenção Periferica;</div></li>
@@ -132,7 +132,7 @@
             </div>  
             <div class="four columns">
               <div class="service-title">Engenharia Mecânica</div>
-              <ul>
+              <ul class="list">
                 <li><div class="service-text">Projetos de AVAC;</div></li>
                 <li><div class="service-text">Projetos de Ventilação;</div></li> 
                 <li><div class="service-text">Projetos de Exaustão de Fumos;</div></li>
@@ -143,7 +143,7 @@
             </div>
             <div class="four columns">
               <div class="service-title">Engenharia Electrotécnica</div>
-                <ul>
+                <ul class="list">
                   <li><div class="service-text">Projetos de Electricidade;</div></li>
                   <li><div class="service-text">Projetos de Telecomunicações;</div></li> 
                   <li><div class="service-text">Projetos de ITED;</div></li>
