--- a/contactos.html
+++ b/contactos.html
@@ -99,6 +99,8 @@
           <div class="six columns">
             Primeiro e último nome:<br>
             <input type="text" name="name" class="form-input js-contact"><br>
+            Telemóvel:<br>
+            <input type="tel" name="phone" class="form-input js-contact"><br>
             Seu e-mail:<br>
             <input type="email" name="email" class="form-input js-contact">
           </div>
