--- a/projectos.html
+++ b/projectos.html
@@ -94,7 +94,7 @@
       </div>  
       <div class="section__line"></div>
       <div class="section__projects">
-        <div class="four columns">
+        <div class="section__projects-container">
           <div class="project" style="background-image:url(images/Proj1/Bet1.JPG);">
             <div class="after"></div>
             <div class="project__title">Estruturas em Betão</div>
@@ -103,7 +103,7 @@
             </div>  
           </div>  
         </div>  
-        <div class="four columns">
+        <div class="section__projects-container">
           <div class="project" style="background-image:url(images/Proj2/Met1.jpg);">
             <div class="after"></div>
             <div class="project__title">Estruturas Metálicas e Madeira</div>
@@ -112,7 +112,7 @@
             </div>  
           </div> 
         </div>  
-        <div class="four columns">
+        <div class="section__projects-container">
           <div class="project" style="background-image:url(images/Proj3/Reb4.JPG);">
             <div class="after"></div>
             <div class="project__title">Reabilitação Urbana</div>
@@ -121,9 +121,8 @@
             </div> 
           </div> 
         </div>  
-      </div> 
-      <div class="section__projects">
-        <div class="four columns">
+      
+        <div class="section__projects-container">
           <div class="project" style="background-image:url(images/Proj4/Inf1.JPG);">
             <div class="after"></div>
             <div class="project__title">Infraestruturas de Edificios</div>
@@ -132,7 +131,7 @@
             </div>  
           </div>  
         </div>  
-        <div class="four columns">
+        <div class="section__projects-container">
           <div class="project" style="background-image:url(images/AVAC/avac1.jpg);">
             <div class="after"></div>
             <div class="project__title">AVAC</div>
@@ -141,7 +140,7 @@
             </div>  
           </div>
         </div>
-        <div class="four columns">
+        <div class="section__projects-container">
           <div class="project" style="background-image:url(images/Proj6/Lot1.JPG);">
             <div class="after"></div>
             <div class="project__title">Infraestruturas de Loteamentos</div>
