--- a/contactos.html
+++ b/contactos.html
@@ -123,7 +123,7 @@
           <div class="six columns">
             Primeiro e último nome:<br>
             <input type="text" name="name" class="form-input js-contact"><br>
-            Telemóvel:<br>
+            Telefone:<br>
             <input type="tel" name="phone" class="form-input js-contact"><br>
             Seu e-mail:<br>
             <input type="email" name="email" class="form-input js-contact">
